--- a/text/index.html
+++ b/text/index.html
@@ -54,58 +54,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </div>
 <div id="TOC">
 <ul>
-<li><a href="#初めてのjavascriptタートルプログラミング"><span class="toc-section-number">1</span> 初めてのJavascriptタートルプログラミング</a><ul>
-<li><a href="#学習目標"><span class="toc-section-number">1.1</span> 学習目標</a></li>
-<li><a href="#最初のタートルプログラム"><span class="toc-section-number">1.2</span> 最初のタートルプログラム</a></li>
-<li><a href="#タートルの命令の解説"><span class="toc-section-number">1.3</span> タートルの命令の解説</a></li>
-<li><a href="#プログラムミスと対処"><span class="toc-section-number">1.4</span> プログラムミスと対処</a></li>
-<li><a href="#練習問題"><span class="toc-section-number">1.5</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#コンピュータに情報を記憶させてみよう変数"><span class="toc-section-number">2</span> コンピュータに情報を記憶させてみよう（変数）</a><ul>
-<li><a href="#学習目標-1"><span class="toc-section-number">2.1</span> 学習目標</a></li>
-<li><a href="#変数"><span class="toc-section-number">2.2</span> 変数</a></li>
-<li><a href="#コンピュータに計算をさせる"><span class="toc-section-number">2.3</span> コンピュータに計算をさせる</a></li>
-<li><a href="#考えてみよう">考えてみよう</a></li>
-<li><a href="#ユーザと対話するインタラクティブなプログラム"><span class="toc-section-number">2.4</span> ユーザと対話する（インタラクティブ）なプログラム</a></li>
-<li><a href="#乱数"><span class="toc-section-number">2.5</span> 乱数</a></li>
-<li><a href="#練習問題-1"><span class="toc-section-number">2.6</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#プログラムに知性を条件分岐"><span class="toc-section-number">3</span> プログラムに知性を(条件分岐)</a><ul>
-<li><a href="#学習目標-2"><span class="toc-section-number">3.1</span> 学習目標</a></li>
-<li><a href="#条件分岐を使う"><span class="toc-section-number">3.2</span> 条件分岐を使う</a></li>
-<li><a href="#いろいろな条件式"><span class="toc-section-number">3.3</span> いろいろな条件式</a></li>
-<li><a href="#変数のスコープ有効範囲"><span class="toc-section-number">3.4</span> 変数のスコープ（有効範囲）</a></li>
-<li><a href="#練習問題-2"><span class="toc-section-number">3.5</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#コンピュータの得意な仕事繰り返し"><span class="toc-section-number">4</span> コンピュータの得意な仕事(繰り返し)</a><ul>
-<li><a href="#学習目標-3"><span class="toc-section-number">4.1</span> 学習目標</a></li>
-<li><a href="#繰り返し"><span class="toc-section-number">4.2</span> 繰り返し</a></li>
-<li><a href="#応用円を書くプログラム"><span class="toc-section-number">4.3</span> 応用：円を書くプログラム</a></li>
-<li><a href="#for文"><span class="toc-section-number">4.4</span> for文</a></li>
-<li><a href="#練習問題-3"><span class="toc-section-number">4.5</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#ブロックの入れ子構造"><span class="toc-section-number">5</span> ブロックの入れ子構造</a><ul>
-<li><a href="#学習目標-4"><span class="toc-section-number">5.1</span> 学習目標</a></li>
-<li><a href="#繰り返しの入れ子"><span class="toc-section-number">5.2</span> 繰り返しの入れ子</a></li>
-<li><a href="#入れ子と並列の違いの考察花を描くプログラム"><span class="toc-section-number">5.3</span> 入れ子と並列の違いの考察：花を描くプログラム</a></li>
-<li><a href="#繰り返し変数の利用"><span class="toc-section-number">5.4</span> 繰り返し変数の利用</a></li>
-<li><a href="#練習問題-4"><span class="toc-section-number">5.5</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#命令をつくる関数引数付関数"><span class="toc-section-number">6</span> 命令をつくる（１）：関数．引数付関数</a><ul>
-<li><a href="#学習目標-5"><span class="toc-section-number">6.1</span> 学習目標</a></li>
-<li><a href="#関数"><span class="toc-section-number">6.2</span> 関数</a></li>
-<li><a href="#引数付関数"><span class="toc-section-number">6.3</span> 引数付関数</a></li>
-<li><a href="#変数の有効範囲と引数"><span class="toc-section-number">6.4</span> 変数の有効範囲と引数</a></li>
-<li><a href="#関数の設計あるいはプログラムの構造化"><span class="toc-section-number">6.5</span> 関数の設計．あるいはプログラムの構造化</a></li>
-<li><a href="#ライブラリ">ライブラリ</a></li>
-<li><a href="#練習問題-5"><span class="toc-section-number">6.6</span> 練習問題</a></li>
-</ul></li>
-<li><a href="#挑戦再帰プログラム"><span class="toc-section-number">7</span> 挑戦：再帰プログラム</a><ul>
-<li><a href="#学習目標-6"><span class="toc-section-number">7.1</span> 学習目標</a></li>
-<li><a href="#再帰呼び出し"><span class="toc-section-number">7.2</span> 再帰呼び出し</a></li>
-<li><a href="#フラクタル図形"><span class="toc-section-number">7.3</span> フラクタル図形</a></li>
-<li><a href="#練習問題-6"><span class="toc-section-number">7.4</span> 練習問題</a></li>
-</ul></li>
+<li><a href="#初めてのjavascriptタートルプログラミング"><span class="toc-section-number">1</span> 初めてのJavascriptタートルプログラミング</a></li>
+<li><a href="#コンピュータに情報を記憶させてみよう変数"><span class="toc-section-number">2</span> コンピュータに情報を記憶させてみよう（変数）</a></li>
+<li><a href="#プログラムに知性を条件分岐"><span class="toc-section-number">3</span> プログラムに知性を(条件分岐)</a></li>
+<li><a href="#コンピュータの得意な仕事繰り返し"><span class="toc-section-number">4</span> コンピュータの得意な仕事(繰り返し)</a></li>
+<li><a href="#ブロックの入れ子構造"><span class="toc-section-number">5</span> ブロックの入れ子構造</a></li>
+<li><a href="#命令をつくる関数引数付関数"><span class="toc-section-number">6</span> 命令をつくる（１）：関数．引数付関数</a></li>
+<li><a href="#挑戦再帰プログラム"><span class="toc-section-number">7</span> 挑戦：再帰プログラム</a></li>
 </ul>
 </div>
 <h1 id="初めてのjavascriptタートルプログラミング"><span class="header-section-number">1</span> 初めてのJavascriptタートルプログラミング</h1>
