--- a/text/index.html
+++ b/text/index.html
@@ -62,6 +62,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="#ブロックの入れ子構造"><span class="toc-section-number">5</span> ブロックの入れ子構造</a></li>
 <li><a href="#命令をつくる関数引数付関数"><span class="toc-section-number">6</span> 命令をつくる：関数．引数付関数</a></li>
 <li><a href="#挑戦再帰プログラム"><span class="toc-section-number">7</span> 挑戦：再帰プログラム</a></li>
+<li><a href="#プログラムの部品化戻り値"><span class="toc-section-number">8</span> プログラムの部品化（２）（戻り値）</a></li>
 </ul>
 </div>
 <h1 id="開発環境pike-placeの説明"><span class="header-section-number">0</span> 開発環境(pike place)の説明</h1>
@@ -3314,5 +3315,292 @@ drawY(50, 0)
 このサイトを参考にして，葉っぱの絵を描いてみましょう．
 
 ファイル名は「Leaf.js」とすること． -->
+<h1 id="プログラムの部品化戻り値"><span class="header-section-number">8</span> プログラムの部品化（２）（戻り値）</h1>
+<h2 id="学習目標-7"><span class="header-section-number">8.1</span> 学習目標</h2>
+<ul>
+<li>戻り値を持つ関数を使ったプログラムを作れるようになる</li>
+<li>入出力を持つ関数を使ったプログラムを作れるようになる</li>
+</ul>
+<h2 id="戻り値付関数"><span class="header-section-number">8.2</span> 戻り値付関数</h2>
+<h3 id="戻り値とは"><span class="header-section-number">8.2.1</span> 戻り値とは</h3>
+<p>引数は，呼び出し元の関数から呼び出した関数に，データを受け渡したいという要求をかなえる仕組みでした． 逆に，呼び出された関数が処理した結果を呼び出し元に受け渡したい，という場合もあります． これをかなえる仕組みが，戻り値です．</p>
+<h3 id="相性占い1"><span class="header-section-number">8.2.2</span> 相性占い1</h3>
+<pre><code>main();
+
+function main() {
+  var aishow = judge(&#39;木村拓哉&#39;, &#39;工藤静香&#39;);
+  println(&quot;相性は&quot; + aishow + &quot;です&quot;);
+}
+
+function judge(name1, name2) {
+  var x = name1.hashCode() + name2.hashCode();
+  x = x % 100;
+  return x;
+}</code></pre>
+<p>上記のプログラムでは，２つの名前を引数として受け取り，２人の相性を計算し，0から99までの数値で返す関数judgeを定義し，呼び出しています．文字列型変数が持つ関数hashCode()は，文字列をハッシュコードと呼ばれる数値に変換し，その値を返す関数です．２名の名前のハッシュコードを足し合わせて，100で割った余りを求めることで，0-99までの相性を求めています．（ハッシュコードを足したものが実際の相性となるわけではないのですが，そこはご愛嬌．）</p>
+<h3 id="戻り値を返す関数の定義方法"><span class="header-section-number">8.2.3</span> 戻り値を返す関数の定義方法</h3>
+<p>戻り値を返す関数の定義の仕方は，次の通りです．</p>
+<pre><code>[戻り値の型] [関数名]([引数の型] [仮引数名]){
+    return [戻り値];
+}</code></pre>
+<p>戻り値あり関数の呼び出し方は，次の通りです（引数あり関数と同じです）．ただし，戻り値を受け取る変数を用意して，戻り値を保存する必要があります．</p>
+<pre><code>var [戻り値を受け取る変数名] = [関数名]([実引数]);</code></pre>
+<p>引数は，複数指定することができますが，戻り値は必ずひとつです． 複数の戻り値を戻したい場合，配列，リストやクラス等を使ってデータを合成し，一つのデータの形にする必要があります．</p>
+<h3 id="コラム戻り値返り値" class="unnumbered">コラム：戻り値？返り値？</h3>
+<p>戻り値は他の教科書では返り値と呼ばれていたりします．元々の英語「return value」の訳は定まっていないように思われます． 昔，僕がたくさんの教科書を調べたかぎりでは，「戻り値」，「返り値」，「リターン値」が各1/3くらいずつ分布していました．</p>
+<h3 id="相性占い2"><span class="header-section-number">8.2.4</span> 相性占い2</h3>
+<pre><code>main();
+
+function main() {
+  var aishow = judge(&#39;木村拓哉&#39;, &#39;工藤静香&#39;);
+  println(&quot;相性は&quot; + aishow + &quot;です&quot;);
+}
+
+function judge(name1, name2) {
+  var x = name1.hashCode() + name2.hashCode();
+  x = x % 100;
+  if (x &gt; 80) {
+    return &#39;ばっちり&#39;;
+  } else {
+    return &#39;そこそこ&#39;;
+  }
+}</code></pre>
+<p>このプログラムでは，judgeプログラムを改造して，相性を数字ではなく，'ばっちり'，'そこそこ'のような文字列で返すようにしたプログラムです．return文が複数ありますが，問題ありません．なぜなら，戻り値付き関数では，return文を書いたところで関数の出力は決まり，関数の処理を終了するからです．逆に，return文の後に命令を書いても，その後の命令は実行されることはなく，制御（実行行）は関数の呼び出し元に戻ります．</p>
+<h2 id="再利用可能な関数の作成"><span class="header-section-number">8.3</span> 再利用可能な関数の作成</h2>
+<p>前章では，引数を利用して抽象度の高いプログラムを作る例（正多角形を描く）を説明しました．戻り値を利用できるようになると，更に幅広く再利用可能な部品（＝関数）を作ることができるようになります．</p>
+<p>例えば，random(X)関数は，Xを引数として，0以上X未満の乱数を作り出す関数でしたが，最小値と最大値を指定して乱数を作ることができる，以下のような関数があると便利です．</p>
+<pre><code>function makeRandom(min, max){．．．}</code></pre>
+<p>minは最小値，maxは最大値を入力する引数で，生成された乱数（最小値から最大値の間に入ること！）を戻り値として出力します．</p>
+<p>この関数を実装し，１０回呼び出してテストをしてみます．</p>
+<pre><code>main();
+
+function main() {
+  for (var i = 0; i &lt; 10; i++) {
+    println(myRandom(20, 30));
+  }
+}
+
+function myRandom(min, max) {
+  return random(max - min) + min;
+}</code></pre>
+<h2 id="入出力を持つ関数を用いたプログラムの構造化"><span class="header-section-number">8.4</span> 入出力を持つ関数を用いたプログラムの構造化</h2>
+<p>関数を使って西暦和暦変換プログラムを構造化してみましょう．</p>
+<p>はじめに，以下に構造化されていない西暦和暦変換プログラムを示します．</p>
+<pre><code> // アプリケーションの開始を知らせる
+ println(&quot;西暦和暦変換プログラムを開始します&quot;);
+
+ // 西暦を和暦に変換する
+ var year;
+ var japaneseYear;
+
+ // 西暦を入力する
+ year = input(&quot;西暦を入力してください&quot;);
+
+ // 西暦を和暦に変換する
+ if (year &gt;= 2019) {
+   japaneseYear = &quot;令和&quot; + (year - 2018);
+ } else if (year &gt;= 1989) {
+   japaneseYear = &quot;平成&quot; + (year - 1988);
+ } else if (year &gt;= 1926) {
+   japaneseYear = &quot;昭和&quot; + (year - 1925);
+ } else {
+   japaneseYear = &quot;不明&quot;;
+ }
+
+ // 変換結果を出力する
+ println(year + &quot;年は&quot; + japaneseYear + &quot;年です.&quot;);
+
+ // アプリケーションの終了を知らせる
+ println(&quot;西暦和暦変換プログラムを終了します&quot;);</code></pre>
+<h3 id="構造化された西暦変換プログラム"><span class="header-section-number">8.4.1</span> 構造化された西暦変換プログラム</h3>
+<p>関数を使って構造化された，西暦変換プログラムの完全版を読んでみましょう．</p>
+<pre><code>// 西暦を和暦に変換する
+main();
+
+function main() {
+  showTitle();
+  convertYear();
+  showEndTitle();
+}
+
+// 西暦を和暦に変換する
+function convertYear() {
+  var year = inputYear();
+  var japaneseYear = convertToJapaneseYear(year);
+  showResult(year, japaneseYear);
+}
+
+// 西暦を入力する
+function inputYear() {
+  var year = input(&quot;西暦を入力してください&quot;);
+  return year;
+}
+
+// 西暦を和暦に変換する
+function convertToJapaneseYear(year) {
+  var japaneseYear;
+  if (year &gt;= 2019) {
+    japaneseYear = &quot;令和&quot; + (year - 2018);
+  } else if (year &gt;= 1989) {
+    japaneseYear = &quot;平成&quot; + (year - 1988);
+  } else if (year &gt;= 1926) {
+    japaneseYear = &quot;昭和&quot; + (year - 1925);
+  } else {
+    japaneseYear = &quot;不明&quot;;
+  }
+  return japaneseYear;
+}
+
+// 変換結果を出力する
+function showResult(year, japaneseYear) {
+  println(year + &quot;年は&quot; + japaneseYear + &quot;年です.&quot;);
+}
+
+// アプリケーションの開始を知らせる
+function showTitle() {
+  println(&quot;西暦和暦変換プログラムを開始します&quot;);
+}
+
+// アプリケーションの終了を知らせる
+function showEndTitle() {
+  println(&quot;西暦和暦変換プログラムを終了します&quot;);
+}</code></pre>
+<h2 id="関数の単体テスト"><span class="header-section-number">8.5</span> 関数の単体テスト</h2>
+<h3 id="結果の出力"><span class="header-section-number">8.5.1</span> 結果の出力</h3>
+<p>本節では，ユーザから底と指数の入力を受け取り，累乗を計算するプログラムの例を利用して，関数の単体テストの作り方について説明します．</p>
+<p>関数をテストするのに，いちいち入力していたのでは手間がかかりますし，どのテストをやったのかを忘れてしまいます． さらには，プログラムを一行だけ修正したとしても，どの箇所が動かなくなるかは予測できないため，全てのテストをやり直す必要があります． したがって，テストはテストプログラムを作って自動化するのがよいです．具体的には，次のプログラムのように列挙して呼び出し，出力すると良いでしょう</p>
+<pre><code>main();
+
+function main() {
+  println(&quot;calculatePower(&quot; + 2 + &quot;, &quot; + 2 + &quot;) = &quot; + calculatePower(2, 2));
+  println(&quot;calculatePower(&quot; + 2 + &quot;, &quot; + 3 + &quot;) = &quot; + calculatePower(2, 3));
+  println(&quot;calculatePower(&quot; + 2 + &quot;, &quot; + 4 + &quot;) = &quot; + calculatePower(2, 4));
+  println(&quot;calculatePower(&quot; + 3 + &quot;, &quot; + 3 + &quot;) = &quot; + calculatePower(3, 3));
+}
+
+// 累乗を計算する
+function calculatePower(base, exponent) {
+  var power = 1; // 累乗数の初期値を，数の0乗（1）に設定する
+
+  // 累乗を計算する
+  var i = 0;
+  while (i &lt; exponent) {
+    power = power * base;
+    i++;
+  }
+
+  return power;
+}</code></pre>
+<h3 id="テストの関数化"><span class="header-section-number">8.5.2</span> テストの関数化</h3>
+<p>テストの表示部分が冗長で，変更が大変です．テストは関数にしましょう．</p>
+<pre><code>main();
+
+function main() {
+  test(2, 2);
+  test(2, 3);
+  test(2, 4);
+  test(3, 3);
+}
+
+function test(base, exp) {
+  println(&quot;calculatePower(&quot; + base + &quot;, &quot; + exp + &quot;) = &quot; + calculatePower(base, exp));
+}
+
+// 累乗を計算する
+function calculatePower(base, exponent) {
+  var power = 1; // 累乗数の初期値を，数の0乗（1）に設定する
+
+  // 累乗を計算する
+  var i = 0;
+  while (i &lt; exponent) {
+    power = power * base;
+    i++;
+  }
+
+  return power;
+}</code></pre>
+<h3 id="期待値とテスト正否の出力"><span class="header-section-number">8.5.3</span> 期待値とテスト正否の出力</h3>
+<p>Power02のプログラムでもテストできていますが，答えが合っているかを毎回目視で確認する必要があります．プログラムに答え（「期待値」といいます）を書いておき，照合結果も出力できるといいですね！</p>
+<pre><code>main();
+
+function main() {
+  test(2, 2, 4);
+  test(2, 3, 8);
+  test(2, 4, 16);
+  test(3, 3, 27);
+}
+
+function test(base, exp, expected) {
+  var answer = calculatePower(base, exp);
+  var result = &quot;&quot;;
+  if (answer == expected) {
+    result = &quot;PASS&quot;;
+  } else {
+    result = &quot;FAIL&quot;;
+  }
+  println(&quot;calculatePower(&quot; + base + &quot;, &quot; + exp + &quot;) = &quot; + answer + &quot;, 判定: &quot; + result);
+}
+
+// 累乗を計算する
+function calculatePower(base, exponent) {
+  var power = 1; // 累乗数の初期値を，数の0乗（1）に設定する
+
+  // 累乗を計算する
+  var i = 0;
+  while (i &lt; exponent) {
+    power = power * base;
+    i++;
+  }
+
+  return power;
+}</code></pre>
+<h2 id="練習問題-7"><span class="header-section-number">8.6</span> 練習問題</h2>
+<h3 id="年齢計算"><span class="header-section-number">8.6.1</span> 年齢計算</h3>
+<p>年齢を計算する次の関数を作り，テストしてください． （以下，「テストする」とは，メインのプログラム（main()関数）から一回以上その関数を呼ぶプログラムを書くことを意味する）</p>
+<pre><code>function getAge(year){．．．}</code></pre>
+<p>yearは西暦で生まれ年を入力する引数で，今年の年齢を戻り値として出力する．（今年だけ使えればよい）</p>
+<p>ファイル名は「HowOld.js」とすること．</p>
+<h3 id="税込み価格計算"><span class="header-section-number">8.6.2</span> 税込み価格計算</h3>
+<p>税込み価格を計算する次の関数を作り，テストしてください．</p>
+<pre><code>function getWithTax(withoutTax){．．．}</code></pre>
+<p>withoutTaxは税抜きの価格を入力する引数で，消費税込の価格を戻り値として出力する．（日本で，今年だけ使えればよい）</p>
+<p>ファイル名は「ConsumptionTax.js」とすること．</p>
+<h3 id="勝率計算"><span class="header-section-number">8.6.3</span> 勝率計算</h3>
+<p>勝率を計算する次の関数を作り，テストしてください．</p>
+<pre><code>function getWinningRate(win, lose){．．．}</code></pre>
+<p>winは勝数, loseは敗数をそれぞれ入力する引数で，勝率（単位％）を戻り値として出力する．（小数第一位以下切り捨て，もしくは四捨五入のいずれかでよい）</p>
+<p>ファイル名は「WinningRate.js」とすること．</p>
+<h3 id="bmi"><span class="header-section-number">8.6.4</span> BMI</h3>
+<p>BMIを計算する次の関数を作り，テストしてください．</p>
+<pre><code>function bmi(height, weight){．．．}</code></pre>
+<p>heightは身長(cm)，weightは体重を入力する引数で，BMI値を戻り値として出力する．BMIの計算方法は，Webなどを参考にすること</p>
+<p>ファイル名は「BMI.js」とすること．</p>
+<h3 id="総和"><span class="header-section-number">8.6.5</span> 総和</h3>
+<p>１からnまでの総和（1からnまでの数を全部足した数）を計算する次の関数を作り，テストしてください．</p>
+<pre><code>function sum(int n){．．．}</code></pre>
+<p>nはいくつまでの総和を求めるか入力する引数で，計算された総和を戻り値として出力する．</p>
+<p>ファイル名は「Sum.js」とすること．</p>
+<!-- ### ランダム
+最小値と最大値を考慮してランダムな数値を作りだす以下の関数を作り，テストしてください．
+
+```                     
+int makeRandom(int min, int max){．．．}
+```
+                
+minは最小値，maxは最大値を入力する引数で，生成されたランダムな数（最小値から最大値の間に入ること！）を戻り値として出力する．
+
+ファイル名は「MyRandom.js」とすること． -->
+<h3 id="じゃんけん"><span class="header-section-number">8.6.6</span> じゃんけん</h3>
+<p>じゃんけんの判定をする次の関数を作り，テストしてください．</p>
+<pre><code>function jankenJudge(hand1, hand2){．．．}</code></pre>
+<p>hand1はplayer１の手（0-グー, 1-チョキ, 2-パー），hand2はplayer2の手（数字の割り当てはplayer1と同じ）を表現する引数で， player1からみた結果(1-勝ち，0-あいこ, (-1)-負け)を戻り値として出力する．</p>
+<p>ファイル名は「Janken.js」とすること．</p>
+<h3 id="コイン投げのシミュレーション"><span class="header-section-number">8.6.7</span> コイン投げのシミュレーション</h3>
+<p>まず次の関数を作ってください．この関数は，コイン投げをシミュレートし，trueかfalseをそれぞれ二分の一の確率で戻します．</p>
+<pre><code>function flip(){．．．}</code></pre>
+<p>次に，次の関数を作ってください．この関数は引数で与えられたn回flip関数を呼び，表が出た回数を数えて戻り値とします．</p>
+<pre><code>function simulate(n){．．．}</code></pre>
+<p>最後に，この関数をテストし，実際の確率を計算してみてください．（できる人は，試行回数が増えるにつれて 1/2に近くなることを表現する出力を考えてみよう．）</p>
+<p>ファイル名は「Coin.js」とすること．</p>
 </body>
 </html>
