キッチンタイマー２の仕様の修正

--- a/text-part3/practice13.html
+++ b/text-part3/practice13.html
@@ -38,7 +38,7 @@
     <ul>
         <li>ボタンの左隣に残時間計「分：秒」を用意する．</li>
         <li>「min+」ボタンを押すと残時間計の「分」に１を足す．</li>
-        <li>「min-」ボタンを押すと残時間計の「分」から１を引く．</li>
+        <li>「min-」ボタンを押すと残時間計の「分」から１を引く．（マイナスにならないようにする工夫も期待します）</li>
         <li>「Start」ボタンを押すと，残時間計が１秒毎にカウントダウンする．（「秒の位」が０になったら，「分の位」に残りがあれば１を引き，「秒の位」を５９とする）</li>
         <li>残時間計が０になると，カウントを止め，キャンパスに「時間です！」と表示する．（テキストでも，任意の画像でも良い．）</li>
     </ul>
