ミニプロジェクト要項の変更

--- a/text-part3/project02.html
+++ b/text-part3/project02.html
@@ -15,9 +15,18 @@
     </ul>
     <h3>提出物</h3>
     <ol>
-        <li>動作するWebサイト（学内公開フォルダにアップロードし，学内コンピュータから閲覧することができること）</li>
-        <li>1/24(金) 1限での１分間プレゼンテーション</li>
-        <li>個人レポート（個人での担当箇所とその所感を記述したもの，A4ー半ページ以上）</li>
+        <li>動作するWebサイト（グループごと）</li>
+        <ul>
+            <li>学内公開フォルダにアップロードし，学内コンピュータから閲覧できるようにする</li>
+            <li>作品制作(1)で公開した方法と同様，Yドライブにて公開するが，作品制作(1)は消さないようにする</li>
+            <li>上記の目的のため，Yドライブにprojectフォルダを作り，その中に作品を入れる</li>
+            <li>作品のURLがhttp://sc17vlweb01.cc.ag.aoyama.ac.jp/user/[グループのいずれか１名ののログイン名]/project/index.htmlになるようにする</li>
+        </ul>
+        <li>1/24(金) 1限での１分間プレゼンテーション（グループごと）</li>
+        <li>個人レポート（個人での担当箇所とその所感を記述したもの，A4ー半ページ以上）（個人ごと）</li>
+        <ul>
+            <li>コースパワーにて提出</li>
+        </ul>
     </ol>
     <h3>提出期限</h3>
     <ul>
