--- a/text-part4/src/7-2.html
+++ b/text-part4/src/7-2.html
@@ -29,7 +29,7 @@
         //この関数は変えないこと
         function connect(query) {
             return new Promise(function (resolve) {
-                $.post('http://dbkiso.si.aoyama.ac.jp/api/', query, function (data, textStatus) {
+                $.post('https://dbkiso.si.aoyama.ac.jp/api/', query, function (data, textStatus) {
                     var objects = JSON.parse(data);
                     resolve(objects);
                 });
