--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-  
   <header>
-    <h1 class="title">コンピューティング実習演習問題1</h1>
+    <h1 class="title">コンピューティング実習　問題1</h1>
   </header>
 
   <p>
