s1 完成図変更

--- a/jigsaw/p3/index.html
+++ b/jigsaw/p3/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1 class="title">コンピューティング実習　問題1</h1>
+    <h1 class="title">コンピューティング実習　問題2</h1>
   </header>
 
   <p>
@@ -18,16 +18,16 @@
   <p class="double-bottom"></p>
   <p>
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1vf_8hDvKeov4iDtQmIe3IjFEOZJ1484icXqDbg1a6So&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BE%8B%E9%A1%8C"
-      target="exp">1-0例題</a> を解いてください。
+      target="exp">2-0例題</a> を解いてください。
   </p>
   <p> <a
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/14TBWHz4uQ1I3BZy-fPFS0Uu9X3dS61KI9WQUIm_iQnE&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%83%80%E3%82%A4%E3%83%A4%E3%82%92%E4%BD%9C%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A02020"
-      target="exp">1-1ダイヤ</a> を描くプログラムを生成してください。
+      target="exp">2-1ダイヤ</a> を描くプログラムを生成してください。
   </p>
 
   <p> <a
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
-      target="exp">1-2六望星</a> を描くプログラムを出力してください。
+      target="exp">2-2六望星</a> を描くプログラムを出力してください。
   </p>
   <p> <a
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
@@ -41,7 +41,7 @@
   <div class="vertical-line"></div>
 
   <p class="double-bottom"></p>
-  <img src="star.jpg" alt="写真" width="200" height="500">
+  <img src="image4.jpg" alt="写真" width="200" height="500">
   <div id="footer">©Sanae　Fujii</div>
   <p> <a
       href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0"
