--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -41,7 +41,7 @@
   <div class="vertical-line"></div>
 
   <p class="double-bottom"></p>
-  <img src="star.jpg" alt="写真" width="200" height="500">
+  <img src="star4.jpg" alt="写真" width="200" height="500">
   <div id="footer">©Sanae　Fujii</div>
   <p> <a
       href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0"
