--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -43,21 +43,21 @@
   <p class="double-bottom"></p>
   <img src="star4.jpg" alt="写真" width="200" height="500">
   <div id="footer">©Sanae　Fujii</div>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-0のdocument id を送信</a>
+
+ 
+  </p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0" target="_blank" rel="noopener noreferrer">1-0のdocument id を送信</a>  </p>
+</p> <a
+      href="https://docs.google.com/forms/d/e/1FAIpQLSfI5Q0EDhEks6NCG9VebpSTngSB9yXOcZ909SgMXofa0zDMZw/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-1のdocument id を送信</a></p>
+
   </p>
   <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSfI5Q0EDhEks6NCG9VebpSTngSB9yXOcZ909SgMXofa0zDMZw/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-1のdocument id を送信</a>
+      href="https://docs.google.com/forms/d/e/1FAIpQLScqrweO1RRI9Nwow39tzdnI2fE8ipiUQdsub4JB4o349FhFsw/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-2のdocument id を送信</a>
+      
   </p>
   <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLScqrweO1RRI9Nwow39tzdnI2fE8ipiUQdsub4JB4o349FhFsw/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-2のdocument id を送信</a>
-  </p>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSe4v1Epzq9VL6vXrFLil3IfLeLwaBbaKADbaKsDmgIXxdgezQ/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-3のdocument id を送信</a>
+      href="https://docs.google.com/forms/d/e/1FAIpQLSe4v1Epzq9VL6vXrFLil3IfLeLwaBbaKADbaKsDmgIXxdgezQ/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-3のdocument id を送信</a>
+
+  
   </p>
 
   </footer>
