画像のいち変更

--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -16,6 +16,10 @@
   <h1>問題1</h1>
   </p>
   <p class="double-bottom"></p>
+  <iframe
+  src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+  name="exp" width="900" height="800" align="right" scrolling="yes" marginheight="20">
+</iframe>
   <p>
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1vf_8hDvKeov4iDtQmIe3IjFEOZJ1484icXqDbg1a6So&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BE%8B%E9%A1%8C"
       target="exp">1-0例題</a> を解いてください。
@@ -33,29 +37,28 @@
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
       target="exp">1-3砂時計</a> を描くプログラムを出力してください。
   </p>
-  <iframe
-    src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
-    name="exp" width="1100" height="700" align="right" scrolling="yes" marginheight="50">
+  <img src="star4.jpg" alt="写真" width="200" height="500">
 
-  </iframe>
+
+  
   <div class="vertical-line"></div>
 
   <p class="double-bottom"></p>
-  <img src="star4.jpg" alt="写真" width="200" height="500">
+
   <div id="footer">©Sanae　Fujii</div>
 
  
   </p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0" target="_blank" rel="noopener noreferrer">1-0のdocument id を送信</a>  </p>
 </p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSfI5Q0EDhEks6NCG9VebpSTngSB9yXOcZ909SgMXofa0zDMZw/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-1のdocument id を送信</a></p>
+      href="https://forms.gle/d9DjcsUFYJjqc4eo7"target="_blank" rel="noopener noreferrer">1-1のdocument id を送信</a></p>
 
   </p>
   <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLScqrweO1RRI9Nwow39tzdnI2fE8ipiUQdsub4JB4o349FhFsw/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-2のdocument id を送信</a>
+      href="https://forms.gle/aBy5zwFBLaYwmFpv7"target="_blank" rel="noopener noreferrer">1-2のdocument id を送信</a>
       
   </p>
   <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSe4v1Epzq9VL6vXrFLil3IfLeLwaBbaKADbaKsDmgIXxdgezQ/viewform?vc=0&c=0&w=1&flr=0"target="_blank" rel="noopener noreferrer">1-3のdocument id を送信</a>
+      href="https://forms.gle/mz9uQZptSpSbnwLa7"target="_blank" rel="noopener noreferrer">1-3のdocument id を送信</a>
 
   
   </p>
