--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -18,26 +18,27 @@
   <p class="double-bottom"></p>
   <iframe
   src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
-  name="exp" width="900" height="800" align="right" scrolling="yes" marginheight="20">
+  name="exp" width="800" height="800" align="right" scrolling="yes" marginheight="20">
 </iframe>
   <p>
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1vf_8hDvKeov4iDtQmIe3IjFEOZJ1484icXqDbg1a6So&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BE%8B%E9%A1%8C"
       target="exp">1-0例題</a> を解いてください。
   </p>
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/14TBWHz4uQ1I3BZy-fPFS0Uu9X3dS61KI9WQUIm_iQnE&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%83%80%E3%82%A4%E3%83%A4%E3%82%92%E4%BD%9C%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A02020"
-      target="exp">1-1ダイヤ</a> を描くプログラムを生成してください。
-  </p>
+
 
   <p> <a
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
-      target="exp">1-2六望星</a> を描くプログラムを出力してください。
+      target="exp">1-1六望星</a> を描くプログラムを出力してください。
   </p>
   <p> <a
       href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
-      target="exp">1-3砂時計</a> を描くプログラムを出力してください。
+      target="exp">1-2砂時計</a> を描くプログラムを出力してください。
   </p>
-  <img src="star4.jpg" alt="写真" width="200" height="500">
+  <p> <a
+    href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1Wu_mhyVHkU5_cqwf0Roeu5Kma-xHglnSLnEs560G93k&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%202020"
+    target="exp">1-3濃度</a> を計測するプログラムを出力してください
+</p>
+  <img src="star5.jpg" alt="写真" width="200" height="500">
 
 
   
