--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -12,14 +12,17 @@
     <h1 class="title">コンピューティング実習　問題1</h1>
   </header>
 
-  <p>
-  <h1>問題1</h1>
-  </p>
+
   <p class="double-bottom"></p>
   <iframe
   src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
   name="exp" width="800" height="800" align="right" scrolling="yes" marginheight="20">
 </iframe>
+
+
+
+
+
   <p>
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1vf_8hDvKeov4iDtQmIe3IjFEOZJ1484icXqDbg1a6So&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BE%8B%E9%A1%8C"
       target="exp">1-0例題</a> を解いてください。
@@ -38,7 +41,7 @@
     href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1Wu_mhyVHkU5_cqwf0Roeu5Kma-xHglnSLnEs560G93k&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%202020"
     target="exp">1-3濃度</a> を計測するプログラムを出力してください
 </p>
-  <img src="star5.jpg" alt="写真" width="200" height="500">
+  <img src="star5.jpg" class="poss" alt="写真" width="200" height="500">
 
 
   
