--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -31,7 +31,7 @@
 
  
   <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/105ub7vtqXVsAr1loh5Lxid1fGVFdnxSG3G295dr2lKE&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%202020%20%20%E3%81%AE%E3%82%B3%E3%83%94%E3%83%BC"
+      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1z3Kq2j0YpBSzcPzRF2NJAC4W1-BEp_JtueP0fk1sSYw&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%E8%A8%88%E6%B8%AC2020"
       target="exp">1-2濃度</a> を計測するプログラムを出力してください。
   </p>
   <p> <a
