--- a/jigsaw/p1/index.html
+++ b/jigsaw/p1/index.html
@@ -31,11 +31,11 @@
 
  
   <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1z3Kq2j0YpBSzcPzRF2NJAC4W1-BEp_JtueP0fk1sSYw&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%E8%A8%88%E6%B8%AC2020"
+      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1KDFEFlDuaxLJ9E6Eo0H-rzOWdusRVjyvB47WHgJl5fE&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%BF%83%E5%BA%A6%E8%A8%88%E6%B8%AC2020%20%20(2)"
       target="exp">1-2濃度</a> を計測するプログラムを出力してください。
   </p>
   <p> <a
-    href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1z_3JT7io-vw34s1OOqKElPmvzXlUOWkZPdL5Mpu47_8&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%95%B4%E6%95%B0%E5%85%A5%E3%82%8C%E6%9B%BF%E3%81%88%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+    href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1BhnuCk4k5Aje8WysbRT0WeYXs_6ZLKwz-Utf5Zqo0Fk&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%95%B4%E6%95%B0%E5%85%A5%E3%82%8C%E6%9B%BF%E3%81%88%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%201009"
     target="exp">1-3整数入れ替え</a> プログラムを出力してください。
 </p>
   <img src="suna.JPG" class="poss" alt="写真" width="20%" height="20%">
