第三回小テスト（仮 ）

--- a/jigsaw/p3/index.html
+++ b/jigsaw/p3/index.html
@@ -17,48 +17,34 @@
   </p>
   <p class="double-bottom"></p>
   <p>
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1vf_8hDvKeov4iDtQmIe3IjFEOZJ1484icXqDbg1a6So&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BE%8B%E9%A1%8C"
-      target="exp">2-0例題</a> を解いてください。
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020C"
+      target="exp">3-1.9×9の答え</a> を出力するプログラムを作成してください。
   </p>
   <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/14TBWHz4uQ1I3BZy-fPFS0Uu9X3dS61KI9WQUIm_iQnE&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%83%80%E3%82%A4%E3%83%A4%E3%82%92%E4%BD%9C%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A02020"
-      target="exp">2-1ダイヤ</a> を描くプログラムを生成してください。
+      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1z_B5V-h0IRNpgO4QpXY6qKidDTFnyMaknoKwsCGKYc4&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BA%8C%E4%B9%97%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+      target="exp">3-2.２乗の答え</a> を出力するプログラムを生成してください。
   </p>
 
   <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
-      target="exp">2-2六望星</a> を描くプログラムを出力してください。
+      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1_zbangU-hMfkxxMUxdznMnZhsTJyDTFLKRys2YNCYIA&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%98%9F%E3%82%92%E5%85%AD%E5%80%8B%E4%B8%A6%E3%81%B9%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+      target="exp">3-3.星</a> を描くプログラムを出力してください。
   </p>
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
-      target="exp">1-3砂時計</a> を描くプログラムを出力してください。
-  </p>
+  
   <iframe
-    src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1cx0ePG6ywfNA2Lq_KfhAk_Cfz_oN_Crmyz3sK8c8JmI&mime_type=application/vnd.google-apps.spreadsheet&title=%E7%A0%82%E6%99%82%E8%A8%88%E3%81%AE%E5%AE%B9%E5%99%A8%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+    src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020C"
     name="exp" width="1100" height="700" align="right" scrolling="yes" marginheight="50">
 
   </iframe>
   <div class="vertical-line"></div>
 
   <p class="double-bottom"></p>
-  <img src="image4.jpg" alt="写真" width="200" height="500">
+  <img src="star2.JPG" alt="写真" width="20%" height="20%">
   <div id="footer">©Sanae　Fujii</div>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSfKrmPPSiRx2xU-vxMErMSrOjfcCS6SvPZ2aKfCVkesvo-VYA/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-0のdocument id を送信</a>
-  </p>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSfI5Q0EDhEks6NCG9VebpSTngSB9yXOcZ909SgMXofa0zDMZw/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-1のdocument id を送信</a>
-  </p>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLScqrweO1RRI9Nwow39tzdnI2fE8ipiUQdsub4JB4o349FhFsw/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-2のdocument id を送信</a>
-  </p>
-  <p> <a
-      href="https://docs.google.com/forms/d/e/1FAIpQLSe4v1Epzq9VL6vXrFLil3IfLeLwaBbaKADbaKsDmgIXxdgezQ/viewform?vc=0&c=0&w=1&flr=0"
-      target="exp">1-3のdocument id を送信</a>
-  </p>
+  <p> <a href="https://forms.gle/HnhBT7YxR1rSFcLC6" target="_blank" rel="noopener noreferrer">3-1のdocument id を送信</a>  </p>
+  <p> <a href="https://forms.gle/aZRPbSLX45bGYmgx9" target="_blank" rel="noopener noreferrer">3-2のdocument id を送信</a>  </p>
+  <p> <a href="https://forms.gle/4ApoVP5G9mdF3o9E6" target="_blank" rel="noopener noreferrer">3-3のdocument id を送信</a>  </p>
+
+
 
   </footer>
 
