見た目の調整（松澤）

--- a/jigsaw/p2/index.html
+++ b/jigsaw/p2/index.html
@@ -15,38 +15,43 @@
   <p>
   <h1>問題1</h1>
   </p>
-  <p class="double-bottom"></p>
- 
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
+  <!-- <p class="double-bottom"></p> -->
+
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
       target="exp">2-1六望星</a> を描くプログラムを生成してください。
   </p>
 
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1GEhr5FUEw1lpCL-U_Sl--s32wVLdNazQgR_XIlQ8pJE&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%80%802020"
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1GEhr5FUEw1lpCL-U_Sl--s32wVLdNazQgR_XIlQ8pJE&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%80%802020"
       target="exp">2-2階乗</a> を出力するプログラムを出力してください。
   </p>
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/13SrmFW6r1lN60N6Tm7fA5VGLdRYVIt034P0kRMU_W94&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%81%B2%E3%81%BE%E3%82%8F%E3%82%8Apart3"
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/13SrmFW6r1lN60N6Tm7fA5VGLdRYVIt034P0kRMU_W94&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%81%B2%E3%81%BE%E3%82%8F%E3%82%8Apart3"
       target="exp">2-3ひまわり</a> を描くプログラムを出力してください。
   </p>
-  <iframe
-    src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
-    name="exp" width="900" height="700" align="right" scrolling="yes" marginheight="50">
-
-  </iframe>
-  <div class="vertical-line"></div>
-
   <p class="double-bottom"></p>
-  <img src="h2.JPG" alt="写真"  width="20%" height="20%">
+  <div style="float: left; width: 20%; text-align: center;">
+    <img src="p2image.png" alt="写真" width="60%">
+    <p class="sanae1"> <a href="https://forms.gle/iZuDY3uT16QuU1yM8" target="_blank"
+        rel="noopener noreferrer">2-1のdocument id を送信</a>
+    </p>
+    <p class="sanae1"> <a href="https://forms.gle/Xp8NmirNuKUSjoRD8" target="_blank"
+        rel="noopener noreferrer">2-2のdocument id を送信</a>
+    </p>
+    <p class="sanae1"> <a href="https://forms.gle/hHESGLexT2D9p2S86" target="_blank"
+        rel="noopener noreferrer">2-3のdocument id を送信</a>
+    </p>
+  </div>
+  <div style="float: left; width: 79%; border: solid 1px black;">
+    <iframe
+      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1j2rz--obolk0g6xOQotZSU-1Njs4O5p_SqAPGaLBOjg&mime_type=application/vnd.google-apps.spreadsheet&title=%E5%85%AD%E8%8A%92%E6%98%9F%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%802020%E3%80%80"
+      name="exp" height="700" width="100%" scrolling="yes">
+    </iframe>
+  </div>
+  <div style="clear: both;"></div>
+
   <div id="footer">©Sanae　Fujii</div>
-</p> <a href="https://forms.gle/iZuDY3uT16QuU1yM8" target="_blank" rel="noopener noreferrer">2-1のdocument id を送信</a>  </p>
-</p> <a href="https://forms.gle/Xp8NmirNuKUSjoRD8" target="_blank" rel="noopener noreferrer">2-2のdocument id を送信</a>  </p>
-</p> <a href="https://forms.gle/hHESGLexT2D9p2S86" target="_blank" rel="noopener noreferrer">2-3のdocument id を送信</a>  </p>
-
-
-
-
 
   </footer>
 
